--- a/templates/base.html
+++ b/templates/base.html
@@ -12,27 +12,11 @@
     <div class="sidebar">
         <h2>Админ Панель</h2>
         <ul>
-            <li><a href="{{ url_for('admin_products') }}">Товары</a></li>
+            <li><a href="{{ url_for('admin_panel') }}">Товары</a></li>
             <li><a href="{{ url_for('admin_orders') }}">Заказы</a></li>
             <li><a href="{{ url_for('admin_users') }}">Пользователи</a></li>
             <li><a href="{{ url_for('admin_settings') }}">Настройки</a></li>
-            <li><a href="{{ url_for('admin_logout') }}">Выход</a></li>
-        </ul>
-    </div>
-
-    <!-- Гамбургер-меню -->
-    <div class="hamburger" id="hamburger">
-    &#9776; <!-- Символ гамбургера -->
-    </div>
-
-    <div class="sidebar hidden" id="sidebar">
-        <h2>Админ Панель</h2>
-        <ul>
-            <li><a href="{{ url_for('admin_products') }}">Товары</a></li>
-            <li><a href="{{ url_for('admin_orders') }}">Заказы</a></li>
-            <li><a href="{{ url_for('admin_users') }}">Пользователи</a></li>
-            <li><a href="{{ url_for('admin_settings') }}">Настройки</a></li>
-            <li><a href="{{ url_for('admin_logout') }}">Выход</a></li>
+            <li><a href="{{ url_for('logout') }}">Выход</a></li>
         </ul>
     </div>
 
