--- a/templates/admin_products.html
+++ b/templates/admin_products.html
@@ -9,36 +9,6 @@
     <!-- Кнопка для вызова модального окна добавления нового товара -->
     <button id="add-product-btn" class="add-product-btn">Добавить новый товар</button>
 
-    <!-- Модальное окно для редактирования товара -->
-    <div id="edit-product-modal" class="modal">
-        <div class="modal-content">
-            <span class="close-btn">&times;</span>
-            <h2>Редактировать товар</h2>
-            <form id="edit-product-form" action="/admin/products/edit" method="POST" enctype="multipart/form-data">
-                <input type="hidden" id="edit-id" name="id">
-
-                <label for="edit-name">Название:</label>
-                <input type="text" id="edit-name" name="name" required>
-
-                <label for="edit-category">Категория:</label>
-                <input type="text" id="edit-category" name="category" required>
-
-                <label for="edit-description">Описание:</label>
-                <textarea id="edit-description" name="description" required></textarea>
-
-                <label for="edit-price">Цена:</label>
-                <input type="number" id="edit-price" name="price" required>
-
-                <label for="edit-stock">В наличии:</label>
-                <input type="number" id="edit-stock" name="stock" required>
-
-                <label for="edit-image">Изображение:</label>
-                <input type="file" id="edit-image" name="image" accept="image/*">
-
-                <button type="submit" class="submit-btn">Сохранить</button>
-            </form>
-        </div>
-    </div>
 
     <!-- Таблица товаров -->
     <div class="table-container ">
@@ -47,7 +17,7 @@
                 <th>ID</th>
                 <th>Изображение</th>
                 <th>Название</th>
-                <th>Категория</th>
+                <th>Коллеция</th>
                 <th>Описание</th>
                 <th>Цена</th>
                 <th>В наличии</th>
@@ -57,12 +27,7 @@
             <tr>
                 <td>{{ product.id }}</td>
                 <td>
-<!--                    <img src="{{ url_for('static', filename='images/' + product.image) }}" alt="{{ product.name }}" width="100">-->
-                   {% if product.image %}
-                        <img src="data:image/jpeg;base64,{{ product.image }}" alt="{{ product.name }}">
-                    {% else %}
-                        <p>Изображение отсутствует</p>
-                    {% endif %}
+                    <img src="{{ url_for('static', filename=product.image) }}" alt="{{ product.image }}"  width="250" max-height="150">
                 </td>
                 <td>{{ product.name }}</td>
                 <td>{{ product.category }}</td>
@@ -91,6 +56,42 @@
         </table>
     </div>
 </div>
+
+
+ <!-- Модальное окно для редактирования товара -->
+    <div id="edit-product-modal" class="modal">
+        <div class="modal-content">
+            <span class="close-btn">&times;</span>
+            <h2>Редактировать товар</h2>
+            <form id="edit-product-form" action="/admin/products/edit" method="POST" enctype="multipart/form-data">
+                <input type="hidden" id="edit-id" name="id">
+
+                <label for="edit-name">Название:</label>
+                <input type="text" id="edit-name" name="product_name" required>
+
+                <label for="edit-category">Категория:</label>
+                <input type="text" id="edit-category" name="category" required>
+
+                <label for="edit-description">Описание:</label>
+                <textarea id="edit-description" name="description" required></textarea>
+
+                <label for="edit-price">Цена:</label>
+                <input type="number" id="edit-price" name="price" required>
+
+                <label for="edit-stock">В наличии:</label>
+                <input type="number" id="edit-stock" name="stock" required>
+
+                <label for="edit-image">Изображение:</label>
+                <input type="file" id="edit-image" name="image" accept="image/*">
+
+                <button type="submit" class="submit-btn">Сохранить</button>
+            </form>
+        </div>
+    </div>
+
+
+
+
 {% endblock %}
 
 {% block scripts %}
