--- a/templates/admin_products.html
+++ b/templates/admin_products.html
@@ -27,7 +27,7 @@
             <tr>
                 <td>{{ product.id }}</td>
                 <td>
-                    <img src="{{ url_for('static', filename=product.image) }}" alt="{{ product.image }}"  width="250" max-height="150">
+                    <img src="{{ url_for('static', filename=product.image) }}" alt="{{ product.image }}"  width="200">
                 </td>
                 <td>{{ product.name }}</td>
                 <td>{{ product.category }}</td>
