--- a/templates/admin-orders.html
+++ b/templates/admin-orders.html
@@ -8,18 +8,22 @@
     <tr>
         <th>ID</th>
         <th>Имя покупателя</th>
+        <th>Email</th>
         <th>Дата</th>
         <th>Сумма</th>
         <th>Статус</th>
         <th>Действия</th>
     </tr>
+    {% for order in orders %}
     <tr data-id="101">
-        <td>101</td>
-        <td>Иван Иванов</td>
-        <td>2024-10-10</td>
-        <td>12 500 руб.</td>
-        <td class="order-status">Ожидает</td>
+        <td> {{ order.order_id }} </td>
+        <td> {{ order.username }} </td>
+        <td> {{ order.email }} </td>
+        <td> {{ order.order_date }} </td>
+        <td> {{ order.total_price }} руб.</td>
+        <td class="order-status"> {{ order.status }} </td>
         <td><a href="#" class="edit-status">Изменить статус</a></td>
     </tr>
+    {% endfor %}
 </table>
 {% endblock %}
