--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
     <title>{% block title %}Админ Панель{% endblock %}</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
     <meta name="csrf-token" content="{{ csrf_token }}">
+    <meta charset="UTF-8">
 </head>
 <body>
 
@@ -32,7 +33,7 @@
     </div>
 
     <!-- Подключение скриптов -->
-    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
+    <!-- <script src="{{ url_for('static', filename='js/script.js') }}"></script> -->
     {% block scripts %}{% endblock %}
 </body>
 </html>
