--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -794,3 +794,41 @@ h1, h2, h3 {
     cursor: pointer;
     z-index: 1100;
 }
+
+/* Стили для поля поиска */
+.header-controls {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 10px 0;
+}
+
+.search-container {
+    display: flex;
+    gap: 15px;
+    max-width: 500px;
+}
+
+#product-search {
+    width: 400px;
+    padding: 5px;
+    border: 1px solid #ddd;
+    border-radius: 3px;
+}
+
+#search-filter {
+    padding: 5px;
+    border: 1px solid #ddd;
+    border-radius: 3px;
+}
+
+.search-btn {
+    max-width: 200px;
+    padding: 5px 10px;
+    border: 1px solid #ddd;
+    border-radius: 0 3px 3px 0;
+    background: #f8f9fa;
+    cursor: pointer;
+    font-size: 12px;
+}
+/* end Стили для поля поиска */
